--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,9 @@
 name: qos
 title: RISC-V Capacity and Bandwidth QoS Register Interface
 version: v1.0
-pdf-url: https://github.com/riscv/docs.riscv.org/blob/main/static/pdf/riscv-cbqri.pdf
 nav:
 - modules/ROOT/nav.adoc
+
+asciidoc:
+  attributes:
+    page-pdf_url: https://github.com/riscv/docs.riscv.org/blob/main/static/pdf/riscv-cbqri.pdf
